fix header overflow

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -63,7 +63,7 @@
 
   @include breakpoint($bp4) {
     max-width: 70%;
-    width: auto;
+    width: 100%;
     flex-grow: 1;
   }
 }
